--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,53 +1,60 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(unitree_legged_sdk)
+project(unitree_legged_sdk CXX)
+set(CMAKE_CXX_STANDARD 11)
 
-include_directories(include)
+find_package(lcm REQUIRED)
 
-link_directories(lib)
-
-add_compile_options(-std=c++11)
-
-set(EXTRA_LIBS -pthread libunitree_legged_sdk_amd64.so lcm)
-
-set(CMAKE_CXX_FLAGS "-O3")
+macro(add_example EXAMPLE_NAME)
+    add_executable(${EXAMPLE_NAME} examples/${EXAMPLE_NAME}.cpp)
+    target_link_libraries(
+        ${EXAMPLE_NAME}
+        PUBLIC 
+        pthread 
+        ${PROJECT_SOURCE_DIR}/lib/libunitree_legged_sdk_amd64.so 
+        lcm::lcm
+    )
+    target_include_directories(
+        ${EXAMPLE_NAME}
+        PUBLIC 
+        ${PROJECT_SOURCE_DIR}/include
+        ${LCM_INCLUDE_DIR}
+    )
+endmacro()
 
 # one pc one process
-add_executable(example_position examples/example_position.cpp)
-target_link_libraries(example_position ${EXTRA_LIBS})
-
-add_executable(example_velocity examples/example_velocity.cpp)
-target_link_libraries(example_velocity ${EXTRA_LIBS})
-
-add_executable(example_torque examples/example_torque.cpp)
-target_link_libraries(example_torque ${EXTRA_LIBS})
-
-add_executable(example_walk examples/example_walk.cpp)
-target_link_libraries(example_walk ${EXTRA_LIBS})
-
-add_executable(example_dance examples/example_dance.cpp)
-target_link_libraries(example_dance ${EXTRA_LIBS})
-
-add_executable(example_wirelessHandle examples/example_wirelessHandle.cpp)
-target_link_libraries(example_wirelessHandle ${EXTRA_LIBS})
+add_example(example_position)
+add_example(example_velocity)
+add_example(example_torque)
+add_example(example_walk)
+add_example(example_dance)
+add_example(example_wirelessHandle)
 
 # one pc multi process
-add_executable(lcm_server_high examples/lcm_server_high.cpp)
-target_link_libraries(lcm_server_high ${EXTRA_LIBS})
-
-add_executable(lcm_server_low examples/lcm_server_low.cpp)
-target_link_libraries(lcm_server_low ${EXTRA_LIBS})
+add_example(lcm_server_high)
+add_example(lcm_server_low)
 
 # multi pc
-add_executable(udp_send_test examples/multi_pc_udp_send.cpp)
-target_link_libraries(udp_send_test ${EXTRA_LIBS})
-
-add_executable(udp_recv_test examples/multi_pc_udp_recv.cpp)
-target_link_libraries(udp_recv_test ${EXTRA_LIBS})
+add_example(multi_pc_udp_send)
+add_example(multi_pc_udp_recv)
 
 # lcm server
-add_executable(lcm_server examples/lcm_server.cpp)
-target_link_libraries(lcm_server ${EXTRA_LIBS})
+add_example(lcm_server)
 
 add_subdirectory(pybind11)
-pybind11_add_module(robot_interface_high_level src/python_interface_high_cmd.cpp)
-target_link_libraries(robot_interface_high_level ${EXTRA_LIBS})
+pybind11_add_module(
+    robot_interface_high_level 
+    src/python_interface_high_cmd.cpp
+)
+target_link_libraries(
+    robot_interface_high_level
+    PUBLIC 
+    pthread 
+    ${PROJECT_SOURCE_DIR}/lib/libunitree_legged_sdk_amd64.so 
+    lcm::lcm
+)
+target_include_directories(
+    robot_interface_high_level
+    PUBLIC 
+    ${PROJECT_SOURCE_DIR}/include
+    ${LCM_INCLUDE_DIR}
+)
